# BitFun

./: .dockerignore  .gitignore  AGENTS-CN.md  AGENTS.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Cargo.toml  README.md  README.zh-CN.md  package-lock.json  package.json  pnpm-lock.yaml
BitFun-Installer/src-tauri/: Cargo.toml
BitFun-Installer/src-tauri/src/installer/: commands.rs  generated_locale_contract.rs  mod.rs
src/apps/cli/: AGENTS.md  Cargo.toml  README.md  install.ps1  install.sh
src/apps/cli/src/: account.rs  account_sync.rs  acp_cli.rs  actions.rs  chat_state.rs  commands.rs  config.rs  main.rs  management.rs  model_selection.rs  product_assembly.rs  root_handlers.rs
src/apps/cli/src/agent/: agentic_system.rs  core_adapter.rs  mod.rs  runtime_client.rs
src/apps/cli/src/daemon/: runner.rs  service.rs
src/apps/cli/src/modes/: chat.rs  exec.rs
src/apps/cli/src/peer_host/: args.rs  bootstrap.rs  control.rs  deny.rs  fanout.rs  mod.rs  state.rs
src/apps/cli/src/runtime/: approval.rs  events.rs  mod.rs  services.rs
src/apps/cli/src/ui/: agent_selector.rs  command_menu.rs  command_palette.rs  input.rs  mcp_add_dialog.rs  mcp_selector.rs  mod.rs  model_selector.rs  permission.rs  provider_selector.rs  responsive_popup.rs  skill_selector.rs  startup.rs  subagent_selector.rs  text_input.rs  tool_cards.rs
src/apps/cli/tests/: acp_stdio_cli.rs  compat_entrypoint.rs  exec_cli_contracts.rs  plugin_source_cli.rs  product_assembly_cli.rs  terminal_process_contracts.rs  tui_terminal_process.rs
src/apps/cli/tests/support/: mod.rs
src/apps/desktop/: AGENTS-CN.md  AGENTS.md  Cargo.toml  tauri.dev.conf.json
src/apps/desktop/src/: crash_diagnostics.rs  embedded_relay_host.rs  lib.rs  theme.rs  tray.rs
src/apps/desktop/src/api/: acp_client_api.rs  agentic_api.rs  clipboard_file_api.rs  commands.rs  computer_use_api.rs  config_api.rs  context_upload_api.rs  custom_agent_api.rs  debug_api.rs  dto.rs  external_sources_api.rs  insights_api.rs  mcp_api.rs  miniapp_agent_api.rs  miniapp_api.rs  mod.rs  pages_api.rs  path_target.rs  peer_host_invoke.rs  relay_deploy_api.rs  remote_connect_api.rs  remote_workspace_policy.rs  session_api.rs  skill_api.rs  snapshot_service.rs  storage_commands.rs  subagent_api.rs  system_api.rs  terminal_api.rs  tool_api.rs
src/apps/desktop/src/computer_use/: debug_overlay.rs  desktop_host.rs  integration_e2e.rs  macos_ax_dump.rs  macos_ax_ui.rs  macos_ax_write.rs  macos_bg_input.rs  macos_skylight.rs  mod.rs  som_overlay.rs  terminal_detect.rs  windows_ax_shortcuts.rs  windows_ax_ui.rs  windows_bg_input.rs  windows_capture.rs  windows_list_apps.rs  windows_msaa.rs  windows_wgc_capture.rs
src/apps/desktop/src/runtime/: mod.rs  session_application.rs  session_host_effects.rs
src/apps/relay-server/: Caddyfile  Cargo.toml  Dockerfile  README.md  common.sh  deploy.sh  docker-compose.yml  restart.sh  start.sh  stop.sh
src/apps/relay-server/src/: config.rs  lib.rs  main.rs
src/apps/relay-server/tests/: library_compat.rs
src/apps/server/: Cargo.toml
src/apps/server/src/: bootstrap.rs  main.rs  rpc_dispatcher.rs
src/apps/server/src/routes/: external_sources.rs  mod.rs  websocket.rs
src/crates/adapters/ai-adapters/: AGENTS.md  Cargo.toml  README.md
src/crates/adapters/ai-adapters/src/: client.rs  diagnostics.rs  lib.rs  tool_call_accumulator.rs
src/crates/adapters/ai-adapters/tests/: stream_processor_anthropic.rs  stream_processor_openai.rs  stream_processor_tool_arguments.rs  stream_replay_regressions.rs  stream_test_harness.rs
src/crates/adapters/api-layer/: AGENTS.md  Cargo.toml
src/crates/adapters/api-layer/src/: dto.rs  handlers.rs  lib.rs
src/crates/adapters/opencode-adapter/: AGENTS-CN.md  AGENTS.md  Cargo.toml
src/crates/adapters/opencode-adapter/src/: agent_source.rs  command_source.rs  fixture_contracts.rs  lib.rs  mcp_source.rs  tool_source.rs
src/crates/adapters/opencode-adapter/tests/: opencode_mcp_adapter.rs  opencode_subagent_adapter.rs
src/crates/adapters/transport/: AGENTS.md  Cargo.toml
src/crates/adapters/transport/src/: emitter.rs  event_bus.rs  events.rs  lib.rs  traits.rs
src/crates/adapters/webdriver/: AGENTS.md  Cargo.toml
src/crates/adapters/webdriver/src/: lib.rs
src/crates/assembly/core/: AGENTS-CN.md  AGENTS.md  Cargo.toml  build.rs
src/crates/assembly/core/builtin_playbooks/: browser_data_extraction.yaml  browser_form_fill.yaml  browser_screenshot.yaml  desktop_app_automation.yaml  im_send_message.yaml
src/crates/assembly/core/locales/: en-US.ftl  zh-CN.ftl  zh-TW.ftl
src/crates/assembly/core/src/: external_mcp.rs  external_mcp_tests.rs  external_sources.rs  external_subagents.rs  external_tools.rs  lib.rs  product_assembly.rs  product_domain_runtime.rs  product_runtime.rs  service_agent_runtime.rs
src/crates/assembly/core/tests/: context_profile.rs  git_contracts.rs  product_assembly.rs  remote_connect_host_boundary.rs  remote_mcp_streamable_http.rs
src/crates/assembly/product-capabilities/: AGENTS.md  Cargo.toml
src/crates/contracts/events/: AGENTS.md  Cargo.toml
src/crates/contracts/product-domains/: AGENTS-CN.md  AGENTS.md  Cargo.toml
src/crates/contracts/runtime-ports/: AGENTS.md  Cargo.toml
src/crates/execution/agent-runtime/: AGENTS.md  Cargo.toml
src/crates/execution/agent-stream/: AGENTS.md  Cargo.toml
src/crates/execution/harness/: AGENTS.md  Cargo.toml
src/crates/execution/plugin-runtime-host/: AGENTS.md  Cargo.toml
src/crates/execution/runtime-services/: AGENTS.md  Cargo.toml
src/crates/execution/tool-contracts/: AGENTS.md  Cargo.toml
src/crates/execution/tool-execution/: AGENTS.md  Cargo.toml
src/crates/execution/tool-provider-groups/: AGENTS.md  Cargo.toml
src/crates/interfaces/acp/: AGENTS-CN.md  AGENTS.md  Cargo.toml
src/crates/services/page-function-runtime/: AGENTS.md  Cargo.toml
src/crates/services/relay-service/: AGENTS.md  Cargo.toml
src/crates/services/services-core/: AGENTS.md  Cargo.toml
src/crates/services/services-integrations/: AGENTS.md  Cargo.toml
src/crates/services/terminal/: AGENTS.md  Cargo.toml
(+2247 files in other folders)
