[package]
name = "bitfun-desktop"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "BitFun Desktop Application (Tauri)"

[lib]
name = "bitfun_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bitfun-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }
serde_json = { workspace = true }

[dependencies]
# Internal crates
bitfun-core = { path = "../../crates/assembly/core", default-features = false, features = ["product-full"] }
bitfun-transport = { path = "../../crates/adapters/transport", features = ["tauri-adapter"] }
bitfun-webdriver = { path = "../../crates/adapters/webdriver" }
bitfun-acp = { path = "../../crates/interfaces/acp" }

# Tauri
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-plugin-autostart = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-updater = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }

# Inherited from workspace
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
dark-light = { workspace = true }
similar = { workspace = true }
ignore = { workspace = true }
urlencoding = { workspace = true }
reqwest = { workspace = true }
zip = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
sha1 = { workspace = true }
screenshots = { workspace = true }
enigo = { workspace = true }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
resvg = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
bitflags = { workspace = true }
core-foundation = { workspace = true }
core-graphics = { workspace = true }
dispatch = { workspace = true }
objc2 = { workspace = true, features = ["exception"] }
objc2-foundation = { workspace = true }
objc2-app-kit = { workspace = true }
objc2-vision = { workspace = true }

[target.'cfg(windows)'.dependencies]
win32job = { workspace = true }
windows = { workspace = true, features = [
  "Foundation",
  "Globalization",
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage_Streams",
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_UI_Accessibility",
  "Win32_UI_WindowsAndMessaging",
] }
windows-core = { workspace = true }

[features]
default = []
# Enable webview devtools and element inspector for development builds.
# Only active in debug builds or when explicitly requested via --features devtools.
# Never enabled in release profile intended for end users.
devtools = ["tauri/devtools", "bitfun-webdriver/embedded"]

[target.'cfg(target_os = "linux")'.dependencies]
atspi = { workspace = true }
leptess = { workspace = true }
