[package]
name = "bitfun-relay-server"
version = "0.2.13"
authors = ["BitFun Team"]
edition = "2021"
description = "BitFun Relay Server - WebSocket relay for Remote Connect"

[lib]
name = "bitfun_relay_server"
path = "src/lib.rs"

[[bin]]
name = "bitfun-relay-server"
path = "src/main.rs"

[dependencies]
# NOTE: Dependencies are intentionally inlined rather than inherited from the
# workspace so that this crate can be built standalone inside its Docker
# context (src/apps/relay-server/) without copying the whole workspace.
# Web framework
axum = { version = "0.8", features = ["json", "ws"] }
tower-http = { version = "0.6.11", features = ["cors", "fs"] }

# Async runtime
tokio = { version = "1.52", features = ["full"] }
futures-util = "0.3.31"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
dashmap = "6"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"

[lints]
workspace = true
