[package]
name = "bitfun-relay-server"
version = "0.2.13"
authors = ["BitFun Team"]
edition = "2021"
description = "BitFun standalone Remote Connect relay server"

[lib]
name = "bitfun_relay_server"
path = "src/lib.rs"

[[bin]]
name = "bitfun-relay-server"
path = "src/main.rs"

[[bin]]
name = "relay-admin"
path = "src/bin/relay_admin.rs"

[dependencies]
# Dependencies stay explicit so this application and relay-service can be
# built from their reduced standalone Docker context.
bitfun-relay-service = { path = "../../crates/services/relay-service" }
axum = "0.8"
tower-http = { version = "0.6.11", features = ["fs"] }
tokio = { version = "1.52", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
rpassword = "7"
serde_json = "1.0"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unexpected_cfgs = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
undocumented_unsafe_blocks = "warn"
