[package]
name = "bitfun-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "BitFun Server - Web-based AI Code Assistant"

[[bin]]
name = "bitfun-server"
path = "src/main.rs"

[dependencies]
bitfun-core = { path = "../../crates/assembly/core", default-features = false, features = ["product-full"] }

# Web framework
axum = { workspace = true }
tower-http = { workspace = true }

# Inherited from workspace
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true

