[package]
name = "bitfun-ai-adapters"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Shared AI protocol adapters for BitFun core and installer"

[lib]
name = "bitfun_ai_adapters"
crate-type = ["rlib"]

[dependencies]
anyhow = { workspace = true }
bitfun-agent-stream = { path = "../../execution/agent-stream" }
bitfun-core-types = { path = "../../contracts/core-types" }
chrono = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
bitfun-events = { path = "../../contracts/events" }
tokio-util = { workspace = true }
