[package]
name = "bitfun-ai-adapters"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Shared AI protocol adapters for BitFun core and installer"

[lib]
name = "bitfun_ai_adapters"
crate-type = ["rlib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true, optional = true }
bitfun-agent-stream = { path = "../../execution/agent-stream" }
bitfun-core-types = { path = "../../contracts/core-types" }
bitfun-services-core = { path = "../../services/services-core", default-features = false, optional = true }
chrono = { workspace = true }
dirs = { workspace = true, optional = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true, optional = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true, optional = true }

[features]
subscription-auth = [
    "dep:base64",
    "dep:bitfun-services-core",
    "dep:dirs",
    "dep:sha2",
    "dep:uuid",
]

[dev-dependencies]
axum = { workspace = true }
bitfun-events = { path = "../../contracts/events" }

[lints]
workspace = true
