[package]
name = "bitfun-ai-adapters"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Shared AI protocol adapters for BitFun core and installer"

[lib]
name = "bitfun_ai_adapters"
crate-type = ["rlib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true, optional = true }
bitfun-agent-stream = { path = "../../execution/agent-stream" }
bitfun-core-types = { path = "../../contracts/core-types" }
bitfun-services-core = { path = "../../services/services-core", default-features = false, optional = true }
chrono = { workspace = true }
dirs = { workspace = true, optional = true }
keyring-core = { workspace = true, optional = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
fs2 = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true, optional = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { workspace = true, optional = true }

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "ios", target_os = "android"))))'.dependencies]
zbus-secret-service-keyring-store = { workspace = true, optional = true }

[features]
subscription-auth = [
    "dep:apple-native-keyring-store",
    "dep:base64",
    "dep:bitfun-services-core",
    "dep:dirs",
    "dep:fs2",
    "dep:keyring-core",
    "dep:libc",
    "dep:sha2",
    "dep:uuid",
    "dep:windows-native-keyring-store",
    "dep:zbus-secret-service-keyring-store",
]

[dev-dependencies]
axum = { workspace = true }
bitfun-events = { path = "../../contracts/events" }

[lints]
workspace = true
