[package]
name = "bitfun-api-layer"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "BitFun API Layer - Platform-agnostic business handlers"

[lib]
name = "bitfun_api_layer"

[dependencies]
# Internal crates
bitfun-transport = { path = "../transport" }

# Inherited from workspace
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
