[package]
name = "bitfun-opencode-adapter"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "OpenCode-compatible source and candidate adapter for BitFun"

[lib]
name = "bitfun_opencode_adapter"
crate-type = ["rlib"]

[dependencies]
async-trait = { workspace = true }
bitfun-plugin-runtime-host = { path = "../../execution/plugin-runtime-host" }
bitfun-product-domains = { path = "../../contracts/product-domains", default-features = false, features = ["external-sources", "plugin-source"] }
bitfun-runtime-ports = { path = "../../contracts/runtime-ports" }
bitfun-services-core = { path = "../../services/services-core", default-features = false, features = ["markdown"] }
dirs = { workspace = true }
dunce = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
urlencoding = { workspace = true }
url = { workspace = true }

[dev-dependencies]
bitfun-services-integrations = { path = "../../services/services-integrations", default-features = false, features = ["plugin-source", "script-tool-runtime"] }
tokio = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
