[package]
name = "bitfun-webdriver"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Embedded WebDriver server for BitFun desktop"

[features]
default = []
embedded = []

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
tauri = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
image = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = { workspace = true }
objc2 = { workspace = true }
objc2-app-kit = { workspace = true, features = ["NSImage", "NSImageRep", "NSBitmapImageRep"] }
objc2-foundation = { workspace = true, features = ["NSString", "NSData", "NSError", "NSDictionary"] }
objc2-web-kit = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
tempfile = { workspace = true }
webview2-com = { workspace = true }
windows = { workspace = true, features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_Com_StructuredStorage"] }
windows-core = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
glib = { workspace = true }
gtk = { workspace = true }
tempfile = { workspace = true }
webkit2gtk = { workspace = true }
